...
    <string name="bikes_availability_text">rowery</string>
    <string name="station_working_text">sprawna</string>
    <string name="station_reported_text">zgłoszona</string>
    <string name="station_broken_text">niesprawna</string>
    <string name="route_create_title">Trasa</string>
    <string name="input_autocomplete_hint">Pole tekstowe dla lokalizacji</string>
    <string name="start_input_hint">Początek trasy</string>
    <string name="stop_hint">Przystanek</string>
    <string name="end_input_hint">Koniec trasy</string>
    <string name="add_stop_text">+przystanek</string>
    <string name="cost_criterion_text">najtańsza</string>
    <string name="hybrid_criterion_text">optymalna</string>
    <string name="time_criterion_text">najszybsza</string>
    <string name="submit_route_text">Wyznacz</string>
    <string name="google_attribution">Atrybucja Google</string>
    <string name="specify_address_title">Czy chodziło o…</string>
    <string name="no_address_to_specify_message">Nie zlokalizowano punktu</string>
    <string name="no_history_message">Historia tras jest niedostępna</string>
    <string name="history_title">Historia tras</string>
    <string name="login_title">Logowanie</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Hasło</string>
...
    <string name="error_image_description">Grafika błędu</string>
    <string name="error_primary_text">Wystąpił błąd</string>
    <string name="error_network_text">Brak połączenia z internetem</string>
    <string name="error_auth_text">Nieudane uwierzytelnienie</string>
    <string name="error_stopped_text">System został zatrzymany</string>
    <string name="error_server_text">Wewnętrzny błąd serwera</string>
    <string name="autocomplete_empty_error_text">Brak lokalizacji</string>
    <string name="autocomplete_not_found_error_text">Nieznana lokalizacja</string>
    <string name="password_empty_text">Brak hasła</string>
    <string name="email_invalid_text" tools:ignore="Typos">Niepoprawny adres email</string>
    <string name="name_empty_text">Brak nazwy</string>
    <string name="threshold_invalid_text">Niepoprawna liczba</string>
    <string name="start_location_services_message">Aby kontynuować, włącz lokalizację urządzenia.</string>
    <string name="no_initialize_favourites_message">Nie udało się zainicjować ulubionych miejsc</string>
...
